# internal/entities/event.go
@@ -8,10 +8,10 @@ type Event struct {
 	EventDescription 	string    	`json:"event_description"`
 	StartAt         	string    	`json:"start_at"`
 	EndAt           	string    	`json:"end_at"`
-	MainImageURL    	string    	`json:"main_image_url"`
+	MainImageUrl    	string    	`json:"main_image_url"`
 	RegisterStartDt 	string    	`json:"register_start_dt"`
 	RegisterCloseDt 	string    	`json:"register_close_dt"`
-	CreatedAt      		time.Time	`json:"created_at"`
+	CreatedAt      		time.Time	`gorm:"autoCreateTime" json:"created_at"`
 	UpdatedAt      		time.Time	`gorm:"autoUpdateTime" json:"updated_at"`
 }
 
